--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
     "typescript": "^5.4.5"
+  },
+  "engines": {
+    "node": "18.18.0",
+    "npm": "9.8.1"
   }
 }
